fix: text align to center on loading

--- a/src/components/SomeLoading/styles.module.scss
+++ b/src/components/SomeLoading/styles.module.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
   position: absolute;
   top: 0;
   bottom: 0;
